--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,40 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
                 name="user"
                 type="com.hyun.android.databindingsample.User"/>
+        <variable
+                name="viewModel"
+                type="com.hyun.android.databindingsample.MainViewModel"/>
     </data>
 
-    <FrameLayout
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+        <ImageView android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:onClick="@{()->viewModel.onClickHandler()}"
+                   app:bind_image="@{user.profileURL}"
+                   app:bind_image_error="@{@drawable/error_sample}"/>
         <TextView
-                android:id="@+id/tv_sample"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{user.name}"
-                android:layout_gravity="center"/>
-    </FrameLayout>
+                android:layout_gravity="center"
+                android:textSize="30dp"
+                tools:text="이부분에 이름이 표시됩니다."/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{user.address}"
+                android:layout_gravity="center"
+                android:textSize="30dp"
+                tools:text="이부분에 주소가 표시됩니다."/>
+    </LinearLayout>
 </layout>
