--- a/app/src/main/res/layout/fragment_cat_list.xml
+++ b/app/src/main/res/layout/fragment_cat_list.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".views.CatListFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".views.CatListFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_cat_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
 
-</FrameLayout>
+        </androidx.recyclerview.widget.RecyclerView>
+    </FrameLayout>
+
+</layout>
